objects/SCP_Certa_GC__Limite_de_Big_deal_por_pais__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__CAPEX__c</fullName>
        <label>CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__FCV__c</fullName>
        <label>FCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__NAV__c</fullName>
        <label>NAV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Pais_corto__c</fullName>
        <label>País (ISO 3)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Limite de Big deal por pais</label>
    <nameField>
        <label>País</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limites de Big deal por pais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>